--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
 
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
+<div class="">
+	<div class="main-picture"></div>
+	<br />
+	<div class="container">
+		<h1>Your website is where you show the world your unique nature of business.</h1>
+		<br />
+		<h3>From giving your website a new look, to building complex websites and programs from scratch, we have you covered.</h3>
+		<ul class="mt-3">
+			<li><p class="mt-0 mb-3">Does your site have everything you've ever imagined your business to be?</p></li>
+			<li><p class="mt-0 mb-3">Are you looking to create or update your website?</p></li>
+			<li><p class="mt-0 mb-3">Do you need a desktop app to compliment your site with all the administration management on an easily navigatable user interface?</p></li>
+		</ul>
+		<h5>If you've answered yes to any of the above questions, you've come to the right place. We're here to help your business grow. <a href="https://aryehsilver.co.uk/Contact">Get in touch with us</a> to find out how we can benefit your business.</h5>
+	</div>
+</div>
 
 </body>
 </html>
