Change home page

--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>my-first-website</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <LINK href="styles.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Is your business online during the coronavirus pandemic? Let us help you get your website created or updated." />
+  <link rel="icon" type="image/x-icon" href="/as_logo_5_2_icon.ico" />
+  <title>Home - Aryeh Silver</title>
+  <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" />
+  <!-- Font Awesome Icon -->
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css" />
+  <!-- Google font -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
+<body id="page">
+	<header id="mainhead" class="site-header">
+		<div class="site-branding">
+			<a rel="home" href="/">
+				<div class="logo"></div>
+			</a>
+		</div>
 
-<body>
-
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
-
+		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark main-navigation">
+			<div class="container">
+				<button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+								aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+					<ul class="navbar-nav flex-grow-1">
+						<li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
+						<li class="nav-item"><a class="nav-link " href="/About">About</a></li>
+						<li class="nav-item"><a class="nav-link" href="https://blog.aryehsilver.co.uk">Blog</a></li>
+						<li class="nav-item"><a class="nav-link " href="/RecentCustomers">Recent Customers</a></li>
+						<li class="nav-item"><a class="nav-link" href="https://blog.aryehsilver.co.uk/contact">Contact</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+	<main role="main" class="pb-3">
+		
 <div class="">
 	<div class="main-picture"></div>
 	<br />
@@ -23,9 +57,22 @@
 			<li><p class="mt-0 mb-3">Are you looking to create or update your website?</p></li>
 			<li><p class="mt-0 mb-3">Do you need a desktop app to compliment your site with all the administration management on an easily navigatable user interface?</p></li>
 		</ul>
-		<h5>If you've answered yes to any of the above questions, you've come to the right place. We're here to help your business grow. <a href="https://aryehsilver.co.uk/Contact">Get in touch with us</a> to find out how we can benefit your business.</h5>
+		<h5>If you've answered yes to any of the above questions, you've come to the right place. We're here to help your business grow. <a href="https://blog.aryehsilver.co.uk/contact">Get in touch with us</a> to find out how we can benefit your business.</h5>
 	</div>
 </div>
 
+	</main>
+
+	<footer class="footer">
+		<div class="">
+			&copy; 2020 - Aryeh Silver
+		</div>
+	</footer>
+
+	<script src="/lib/jquery/dist/jquery.min.js"></script>
+	<script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="/js/site.js?v=dLGP40S79Xnx6GqUthRF6NWvjvhQ1nOvdVSwaNcgG18"></script>
+
+	
 </body>
 </html>
