--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Is your business online during the coronavirus pandemic? Let us help you get your website created or updated." />
   <link rel="icon" type="image/x-icon" href="/as_logo_5_2_icon.ico" />
   <title>Home - Aryeh Silver</title>
   <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/css/site.css" />
   <!-- Font Awesome Icon -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css" />
   <!-- Google font -->
