--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 	<script src="/lib/jquery/dist/jquery.min.js"></script>
 	<script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="/js/site.js?v=dLGP40S79Xnx6GqUthRF6NWvjvhQ1nOvdVSwaNcgG18"></script>
+	<script src="/js/site.js"></script>
 
 	
 </body>
