--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 				<div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
 					<ul class="navbar-nav flex-grow-1">
 						<li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
-						<li class="nav-item"><a class="nav-link " href="/About">About</a></li>
+						<li class="nav-item"><a class="nav-link " href="https://aryehsilver.co.uk/About">About</a></li>
 						<li class="nav-item"><a class="nav-link" href="https://blog.aryehsilver.co.uk">Blog</a></li>
-						<li class="nav-item"><a class="nav-link " href="/RecentCustomers">Recent Customers</a></li>
+						<li class="nav-item"><a class="nav-link " href="https://aryehsilver.co.uk/RecentCustomers">Recent Customers</a></li>
 						<li class="nav-item"><a class="nav-link" href="https://blog.aryehsilver.co.uk/contact">Contact</a></li>
 					</ul>
 				</div>
